[metadata]
name = Kgen
version = attr: kgen.VERSION
author = Oscar Branson
author_email = ob266@cam.ac.uk
description = Python functions for calculating stoichiometric speciation constants for seawater.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/PalaeoCarb/Kgen
project_urls =
    PalaeoCarb Project = https://github.com/PalaeoCarb
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires = 
    numpy>=1.21.5
    pymyami==2.1.0
